2001-01-11  Radek Doulik  <rodo@helixcode.com>

	* htmlclue.c (merge): merge all clues

	* htmltext.c (html_text_op_cut_helper): move spell_errors
	(html_text_op_cut_helper): remove spell errors when cutting whole
	text
	(object_split): update spell errors
	(remove_spell_errors): make it exact
	(object_split): do convert_nbsp
	(object_merge): do convert_nbsp

	* htmlgdkpainter.c (alloc_e_font_it): do n1 -> n2 -> n3 instead of
	n1 -> n3

	* gtkhtml.c (selection_received): paste only in editable
	(gtk_html_request_paste): ditto

	* htmlgdkpainter.c (alloc_e_font_it): substitute size by * when
	looking for closest font

	* gtkhtml.c (scroll): repeat two lines when scrolling by page
	(scroll): use rather 2.5 * size
	(cursor_move): try to repeat last 2 lines while scrolling by page
	(2.5 * size)

	* htmlengine-edit-clueflowstyle.c
	(html_engine_set_clueflow_style): free/thaw engine

	* htmlclueflow.c (check_point): fixed case when flow indent level
	> 0

	* htmlfontmanager.c: use full font name

	* gtkhtml-properties.c: read/store full font name

2001-01-10  Radek Doulik  <rodo@helixcode.com>

	* htmlobject.c (html_object_get_tail_leaf): new function, moved
	from cut&paste
	(html_object_get_head_leaf): ditto
	(html_object_get_selection_string): new function, returns
	selection string for object
	(select_object): helper function for
	html_object_get_selection_string
	(unselect_object): ditto

	* gtkhtml.c (gtk_html_cut): set selection owner
	(gtk_html_copy): likewise
	(command): use gtk_html_copy, gtk_html_cut
	(button_release_event): use gtk_html_copy

	* htmlengine-edit-cut-and-paste.c (html_engine_paste_text): add
	undo level "Paste text"
	(html_engine_paste_object): added undo level "Paste"

	* gtkhtml.c (gtk_html_request_paste): do PASTE if no selection
	available
	(button_release_event): copy selection to clipboard
	(gtk_html_paste): use gtk_html_request_paste instead of
	html_engine_paste
	(selection_received): if it's selection from us, use